crates/ruff_python_parser/tests/snapshots/invalid_syntax@re_lexing__triple_quoted_fstring_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/re_lexing/triple_quoted_fstring_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..183,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 167..183,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 167..183,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 167..183,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 171..180,
                                                    node_index: NodeIndex(None),
                                                    expression: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 172..175,
                                                            id: Name("foo"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: Some(
                                                        InterpolatedStringFormatSpec {
                                                            range: 176..180,
                                                            node_index: NodeIndex(None),
                                                            elements: [
                                                                Literal(
                                                                    InterpolatedStringLiteralElement {
                                                                        range: 176..180,
                                                                        node_index: NodeIndex(None),
                                                                        value: ".3f\n",
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: true,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
5 | f'''{foo:.3f
6 | '''
  | ^^^ Syntax Error: f-string: expecting `}`
